--- a/product.html
+++ b/product.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="product.css">
         <link rel="stylesheet" href="shared.css">
         <link rel="icon" href="/img/icon.png" type="image/x-icon">
-        <title>My E-Shop</title>
+	<base href="https://rimvydascivilis.github.io/eshop-ui/">
+	<title>My E-Shop</title>
     </head>
 
     <body>
