Change to relative path

--- a/product.html
+++ b/product.html
@@ -5,14 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="product.css">
         <link rel="stylesheet" href="shared.css">
-        <link rel="icon" href="/img/icon.png" type="image/x-icon">
+        <link rel="icon" href="img/icon.png" type="image/x-icon">
 	<base href="https://rimvydascivilis.github.io/eshop-ui/">
 	<title>My E-Shop</title>
     </head>
 
     <body>
         <header>
-            <a href="/">
+            <a href="index.html">
                 <div class="header-item">
                     <h1>My E-Shop</h1>
                 </div>
@@ -20,21 +20,21 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/about.html">
+                        <a href="about.html">
                             <div class="header-item">About Us</div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <div class="header-item">
-                                <img src="/img/user-picture.png" alt="User picture">
+                                <img src="img/user-picture.png" alt="User picture">
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#">
                             <div class="header-item">
-                                <img src="/img/shopping-cart.png" alt="Shopping cart">
+                                <img src="img/shopping-cart.png" alt="Shopping cart">
                             </div>
                         </a>
                     </li>
