Change path to #

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <a href="index.html">
+            <a href="#">
                 <div class="header-item">
                     <h1>My E-Shop</h1>
                 </div>
