Change path to relative

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <h3>Computer 1</h3>
                             <h3 class="price">999.99 €</h3>
                             <div class="product-buttons">
-                                <button onclick="location.href='/product.html'">More Info</button>
+                                <button onclick="location.href='product.html'">More Info</button>
                                 <button>Add to Cart</button>
                             </div>
                         </div>
